src/spatial_id/collection/flex_tree/map/tests/snapshots/kasane_logic__spatial_id__collection__flex_tree__map__tests__golden__golden_tests__persisted_byte_length_is_stable@temporal.snap
---
source: src/spatial_id/collection/flex_tree/map/tests/golden.rs
expression: bytes.len()
---
409
